--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+server.port = 8000
 
+# db configuration
+spring.datasource.url = jdbc:postgresql://localhost:5432/task_management
+spring.datasource.username = aztec
+spring.datasource.password = 123
+
+# hibernate
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql=true
+
+#jwt service
+jwt.secret = yoursecretkey
