--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,10 @@ spring.jpa.show-sql=true
 
 #jwt service
 jwt.secret = yoursecretkey
+jwt.expiration = 15780000
+
+#smtp configuration
+spring.mail.host = smtp.gmail.com
+spring.mail.port = 587
+spring.mail.username = ibragimovanvar109@gmail.com
+spring.mail.password = essqlbnzxznnnqxh
